# Mobile-Robotics-I

mcl_ws/: launch.sh
mcl_ws/devel/: (ubuntu's conflicted copy 2015-11-19).catkin  (ubuntu's conflicted copy 2015-11-19).rosinstall  .catkin  .rosinstall  setup (ubuntu's conflicted copy 2015-11-19).sh  setup.sh
occ/occupancy/: occupancy_test_edited.m4v
occ/occupancy/src/: occupancy.py  utils.py
occupancy/: CMakeLists.txt  package.xml
occupancy/share/: occupancy.yaml
occupancy/src/: robot.py  settings.py
particle_2d/: CMakeLists.txt  package.xml
particle_2d/launch/: particle_2d.launch
particle_2d/share/: particle_filter_params.yaml
particle_2d/src/: mcl_debug.py  mcl_tools.py  particle_filter.py  robot.py  settings.py
particle_2d/src/raycaster/: raycaster.py
